# dpaster

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  README.md  mypy.ini  pyproject.toml  setup.py  tox.ini
.github/workflows/: push.yaml
dpaster/: __init__.py  __main__.py  application.py  cli.py  config.py  core.py  paste.py  syntaxes.json  util.py
tests/: fixtures.py  test_config.py  test_functional.py  test_get_syntax.py  test_paste.py
