[tool.poetry]
name = "thepaster"
version = "3.3.0"
description = "Command-line client interface for https://dpaste.com/ pastebin"
authors = ["xvm32 <xvm32@users.noreply.github.com>"]
license = "MIT"
packages = [
    { include = "dpaster" },
    { include = "tests" },
]
readme = "README.md"

[tool.poetry.scripts]
dpaster = "dpaster.application:cli"

[tool.poetry.dependencies]
python = ">=3.6,<4"
pyperclip = "^1.8.1"
requests = "^2.25.0"
click-aliases = "^1.0.1"
click = {git = "https://github.com/pallets/click.git"}
pygments = {git = "https://github.com/dagwieers/pygments.git"}

[tool.poetry.dev-dependencies]
tox = "^3.20.1"
mypy = "^0.790"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
tox-ini-fmt = "^0.5.0"

[tool.pytest.ini_options]
addopts = "--cov=dpaster"
testpaths = [
    "tests",
]
filterwarnings = "ignore:.*Using or importing the ABCs.*is deprecated:DeprecationWarning"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
